# podman-manager

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
examples/: orchestrator_service.cpp
include/pod_installer/: container_spec.hpp  deployment.hpp  error.hpp  http.hpp  pod_installer.hpp  podman_client.hpp  quadlet.hpp  socket_validation.hpp  systemd.hpp  target.hpp
include/podman_manager/: container_spec.hpp  deployment.hpp  error.hpp  http.hpp  podman_client.hpp  quadlet.hpp  socket_validation.hpp  systemd.hpp  target.hpp
src/: container_spec.cpp  deployment.cpp  error.cpp  http.cpp  podman_client.cpp  quadlet.cpp  socket_validation.cpp  systemd.cpp  systemd_sdbus.cpp  target.cpp
tests/: pod_installer_tests.cpp  podman_manager_tests.cpp
